fix spacing

--- a/src/app/prompts/prompts/prompts.component.scss
+++ b/src/app/prompts/prompts/prompts.component.scss
@@ -117,3 +117,11 @@ h2 {
   width:80px;
   text-align:center;
 }
+
+.cardsizeleft{
+  width: 60%;
+}
+
+.cardsizeright{
+  width:30%;
+}
